--- a/style.css
+++ b/style.css
@@ -31,8 +31,13 @@ h1{
     margin-top: 15px;
 }
 
-input{
+.input-box{
+    margin: 0 auto;
     width: 70%;
+}
+
+input{
+    width: 100%;
     margin: auto;
     padding: 5px;
     outline: none;
@@ -41,6 +46,24 @@ input{
 input:focus{
     border: 2px solid rgb(77, 124, 255);
     box-shadow: 0px 0px 3px rgb(159, 184, 255);
+}
+
+input.alerta{
+    border: 2px solid red;
+    box-shadow: 0px 0px 3px rgb(255, 88, 88);
+    animation: shake 300ms;
+}
+
+@keyframes shake{
+    25%{transform: translateX(4px);}
+    50%{transform: translateX(-4px);}
+    75%{transform: translateX(4px);}
+}
+
+.texto-error{
+    color: red;
+    font-size: 12px;
+    margin: 10px;
 }
 
 .resultado{
@@ -62,8 +85,13 @@ input:focus{
 }
 
 i{
-    color: red;
+    color: black;
     cursor: pointer;
+    transition: .3s;
+}
+
+i:hover{
+    color: red;
 }
 
 button{
